style.css
@import "bootstrap/dist/css/bootstrap.min.css";

:root {
    --bg-main: #0e0e10;
    --bg-secondary: #18181b;
    --twitch-purple: #9147ff;
    --link-color: #bf94ff;
    --link-hover: #a970ff;
    --muted-text: #606085;
    --border-secondary: #53535f7a;
}

body {
    font-family: "Inter", "Noto Sans Arabic", "Roobert", "Helvetica Neue", Helvetica, Arial, sans-serif;
    background-color: var(--bg-main) !important;
    color: #fff !important;
}

[type=button]:not(:disabled),
[type=reset]:not(:disabled),
[type=submit]:not(:disabled),
button:not(:disabled) {
    font-weight: 600;
}

.border-radius-20 {
    border-radius: 20px !important;
}

.border {
    border: 1px solid #fff !important;
}

.navbar-brand {
    font-size: .875em !important;
}

.nav-link,
footer a {
    text-decoration: none !important;
    color: var(--link-color) !important;

    &:hover,
    &:focus {
        text-decoration: underline !important;
        color: var(--link-hover) !important;
    }
}

.nav-link {
    font-size: .875em !important;
}

.nav-item .nav-link {
    color: #fff !important;
}

.nav-tabs .nav-link:hover {
    border-color: var(--border-secondary) !important;
}

.nav-tabs .nav-item.show .nav-link,
.nav-tabs .nav-link.active {
    border-color: var(--border-secondary) !important;
}

.nav-tabs {
    border-bottom: solid 1px var(--border-secondary) !important;
}

.video-player {
    display: block;
    overflow: hidden;
    border-radius: .375rem;
    z-index: 1; /* Maintain a base priority for all players */
}

.active-stream {
    outline: 4px solid var(--twitch-purple) !important;
    outline-offset: -4px;
    z-index: 2; /* Active stream sits visually higher but others don't drop to 0 */
}

nav.bg-dark {
    background-color: var(--bg-secondary) !important;
    border-bottom: solid 2px #0e0e10;
}

footer.bg-dark {
    background-color: var(--bg-main) !important;
}

.modal {
    .bg-dark {
        background-color: var(--bg-secondary) !important;
    }
}

.list-group-item,
.modal-header,
.modal-footer,
.nav-tabs {
    border-color: var(--border-secondary) !important;
}

.nav-tabs {
    .nav-link {
        font-weight: normal !important;
    }
    .nav-link.active {
        background-color: var(--twitch-purple) !important;
        color: #fff !important;
        font-weight: normal !important;
    }
}

.muted {
    color: var(--muted-text) !important;
}

.btn-purple,
.btn-purple:hover,
.btn-purple:focus,
.btn-purple:active {
    background-color: var(--twitch-purple);
    border-color: #523c7c;
}

#chat-container {
    min-width: 340px;
    flex-grow: 1;
    background-color: var(--bg-secondary) !important;
}

.tab-pane,
.tab-content {
    height: 100%;
    border-left: solid 1px rgba(83, 83, 95, 0.48);
}

iframe {
    border: none;
}

.draggable-item {
    cursor: grab;

    &.dragging {
        opacity: 0.5;
    }
}

